--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="progress_bar_border">
 					<p>877 miles</p>
-					<div class="progress_bar" style="width: 98%"></div>
+					<div class="progress_bar"></div>
 				</div>
 			</div>
 		</div>
